import { CatalogKind } from '@kaoto/editor-api';

import { mockRandomValues } from '../../../stubs';
import { IVisualizationNodeData } from '../base-visual-entity';
import { CamelInterceptSendToEndpointVisualEntity } from './camel-intercept-send-to-endpoint-visual-entity';
import { ModelValidationService } from './support/validators/model-validation.service';

describe('CamelInterceptSendToEndpointVisualEntity', () => {
  beforeAll(() => {
    mockRandomValues();
  });

  describe('function Object() { [native code] }', () => {
    it('should allow to create an instance out of the object definition', () => {
      const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity({
        interceptSendToEndpoint: { id: 'a-reference', uri: 'direct:a-reference' },
      });

      expect(interceptSendToEndpointVisualEntity.getId()).toBe('a-reference');
    });

    it('should allow to create an instance out of the object definition without id', () => {
      const interceptSendToEndpointRaw = {
        interceptSendToEndpoint: { id: undefined, uri: 'direct:a-reference' },
      };
      const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity(
        interceptSendToEndpointRaw,
      );

      expect(interceptSendToEndpointVisualEntity.getId()).toBeDefined();
      expect(interceptSendToEndpointRaw.interceptSendToEndpoint.id).toEqual(
        interceptSendToEndpointVisualEntity.getId(),
      );
    });
  });

  describe('isApplicable', () => {
    it.each([
      [{ from: { id: 'from-1234', steps: [] } }, false],
      [{ onCompletion: { id: 'onCompletionId' } }, false],
      [{ onException: { id: 'onExceptionId' } }, false],
      [{ intercept: { id: 'interceptId' } }, false],
      [{ interceptFrom: { id: 'interceptFromId' } }, false],
      [{ interceptSendToEndpoint: { id: 'interceptSendToEndpointId' } }, true],
    ])('should return %s for %s', (definition, result) => {
      expect(CamelInterceptSendToEndpointVisualEntity.isApplicable(definition)).toEqual(result);
    });
  });

  it('should return the id', () => {
    const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity({
      interceptSendToEndpoint: { id: 'id', uri: 'direct:a-reference' },
    });
    expect(interceptSendToEndpointVisualEntity.getId()).toBe('id');
  });

  it('should set the id', () => {
    const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity({
      interceptSendToEndpoint: 'a-reference',
    });
    interceptSendToEndpointVisualEntity.setId('new-id');
    expect(interceptSendToEndpointVisualEntity.getId()).toBe('new-id');
    expect(interceptSendToEndpointVisualEntity.interceptSendToEndpointDef.interceptSendToEndpoint.id).toBe('new-id');
  });

  describe('getNodeInteraction', () => {
    it.each([
      { primaryNodeId: { name: 'route', catalogKind: CatalogKind.Entity }, path: 'route' },
      { primaryNodeId: { name: 'from', catalogKind: CatalogKind.Entity }, path: 'from' },
      { primaryNodeId: { name: 'to', catalogKind: CatalogKind.Pattern }, path: 'to' },
      { primaryNodeId: { name: 'log', catalogKind: CatalogKind.Pattern }, path: 'log' },
      { primaryNodeId: { name: 'onException', catalogKind: CatalogKind.Entity }, path: 'onException' },
      { primaryNodeId: { name: 'onCompletion', catalogKind: CatalogKind.Entity }, path: 'onCompletion' },
      { primaryNodeId: { name: 'intercept', catalogKind: CatalogKind.Entity }, path: 'intercept' },
      {
        primaryNodeId: { name: 'interceptSendToEndpoint', catalogKind: CatalogKind.Entity },
        path: 'interceptSendToEndpoint',
      },
    ])(`should return the correct interaction for the '%s' processor`, (data) => {
      const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity({
        interceptSendToEndpoint: { id: 'id', uri: 'direct:a-reference' },
      });

      const result = interceptSendToEndpointVisualEntity.getNodeInteraction({
        ...data,
        isPlaceholder: false,
        isGroup: false,
        title: '',
        description: '',
        iconUrl: '',
      } as IVisualizationNodeData);
      expect(result).toMatchSnapshot();
    });

    it('should determine whether a node can be disabled from its schema', () => {
      const entity = new CamelInterceptSendToEndpointVisualEntity({
        interceptSendToEndpoint: { id: 'id', uri: 'direct:a-reference' },
      });
      const result = entity.getNodeInteraction({
        name: 'from',
        primaryNodeId: { name: 'from', catalogKind: CatalogKind.Entity },
        schema: { type: 'object', properties: { disabled: { type: 'boolean' } } },
        isPlaceholder: false,
        isGroup: false,
        iconUrl: '',
        title: '',
        description: '',
      });

      expect(result.canBeDisabled).toBe(true);
    });
  });

  it('should delegate the validation text to the ModelValidationService', async () => {
    const validateNodeStatusSpy = vi.spyOn(ModelValidationService, 'validateNodeStatus').mockResolvedValue('');

    const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity({
      interceptSendToEndpoint: { id: 'id', uri: 'direct:a-reference' },
    });
    await interceptSendToEndpointVisualEntity.getNodeValidationText('interceptSendToEndpoint', {
      type: 'object',
      properties: {},
    });

    expect(validateNodeStatusSpy).toHaveBeenCalled();
  });

  it('toVizNode should return visualization node', async () => {
    const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity({
      interceptSendToEndpoint: { id: 'id', uri: 'direct:a-reference' },
    });
    const vizNode = await interceptSendToEndpointVisualEntity.toVizNode();
    await vizNode.fetchSchema();

    expect(vizNode.data.primaryNodeId?.name).toBe(CamelInterceptSendToEndpointVisualEntity.ROOT_PATH);
    expect(vizNode.data.entity).toBe(interceptSendToEndpointVisualEntity);
    expect(vizNode.data.isGroup).toBeTruthy();
    expect(vizNode.data.primaryNodeId).toEqual({
      name: interceptSendToEndpointVisualEntity.type,
      catalogKind: CatalogKind.Entity,
    });
  });

  it('should serialize the entity', () => {
    const interceptSendToEndpointVisualEntity = new CamelInterceptSendToEndpointVisualEntity({
      interceptSendToEndpoint: { id: undefined, uri: 'direct:a-reference' },
    });
    const result = interceptSendToEndpointVisualEntity.toJSON();

    expect(result).toMatchSnapshot();
  });
});
